# spacecon-spain-2022

./: .buildinfo  .codespellrc  .gitignore  404.html  CNAME  README.md  README.rst  genindex.html  index.html  link.txt  objects.inv  pyproject.toml  search.html  searchindex.js
.ci/: start_mapdl.sh
.github/workflows/: ci.yml
_downloads/3d899d5380a38977f3923de55c612006/: 02-example.ipynb
_downloads/57c7d7311e4b5aa46a9cb8eb67aa0b36/: 01-pymapdl.py
_downloads/853f06145b054c7aaaf07922a8680789/: 00-python.py
_downloads/af766d88a82c093341dba4d437cedbf5/: 01-pymapdl.ipynb
_downloads/b61fd0423e1434b2feb3ac2378caafef/: 02-example.py
_downloads/c2ab57f052a73ac90359522d3dbf8915/: 00-python.ipynb
_sources/: index.rst.txt
_sources/tutorials/: 00-python.rst.txt  01-pymapdl.rst.txt  02-example.rst.txt  index.rst.txt  sg_execution_times.rst.txt
_static/: documentation_options.js
doc/: Makefile  make.bat
doc/source/: conf.py  index.rst
doc/source/tutorials/: 00-python.ipynb  01-pymapdl.ipynb  02-example.ipynb
notebooks/: 00 python.ipynb  00-python.ipynb  01 pymapdl.ipynb  01-pymapdl.ipynb  02 example.ipynb  02-example.ipynb
tutorials/: 00-python.html  00-python.py  01-pymapdl.html  01-pymapdl.py  02-example.html  02-example.py  index.html  readme.rst  sg_execution_times.html
tutorials/00-pymapdl/: pymapdl.py  python.py  readme.txt
tutorials/00-python/: python.py  readme.txt
tutorials/02-example/: example.py
